knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/Contact__x.object-meta.xml
<CustomObject>
    <externalDataSource>CORP_Org</externalDataSource>
    <externalName>Contact</externalName>
    <label>Contact / Providers</label>
    <pluralLabel>Contacts / Providers</pluralLabel>
</CustomObject>