knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <externalDeveloperName>AccountId</externalDeveloperName>
    <label>Account / Hospital Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>