knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/ACLS_c__c.field-meta.xml
<CustomField>
    <fullName>ACLS_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>ACLS__c</externalDeveloperName>
    <label>ACLS</label>
    <type>Checkbox</type>
</CustomField>