knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Actions_c__c.field-meta.xml
<CustomField>
    <fullName>Actions_c__c</fullName>
    <externalDeveloperName>Actions__c</externalDeveloperName>
    <label>Actions</label>
    <length>4099</length>
    <type>LongTextArea</type>
</CustomField>