knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Actively_Working_a_PFA_c__c.field-meta.xml
<CustomField>
    <fullName>Actively_Working_a_PFA_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Actively_Working_a_PFA__c</externalDeveloperName>
    <label>Actively Working a PFA</label>
    <type>Checkbox</type>
</CustomField>