knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Advocacy_c__c.field-meta.xml
<CustomField>
    <fullName>Advocacy_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Advocacy__c</externalDeveloperName>
    <label>Advocacy</label>
    <type>Checkbox</type>
</CustomField>