knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Alternate_Email_c__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Email_c__c</fullName>
    <externalDeveloperName>Alternate_Email__c</externalDeveloperName>
    <label>Alternate Email</label>
    <type>Email</type>
</CustomField>