knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Analytics_Ad_Content_c__c.field-meta.xml
<CustomField>
    <fullName>Analytics_Ad_Content_c__c</fullName>
    <externalDeveloperName>Analytics_Ad_Content__c</externalDeveloperName>
    <label>Analytics Ad Content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>