knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Analytics_AdWordID_c__c.field-meta.xml
<CustomField>
    <fullName>Analytics_AdWordID_c__c</fullName>
    <externalDeveloperName>Analytics_AdWordID__c</externalDeveloperName>
    <label>Analytics AdWordID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>