knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Analytics_Keyword_c__c.field-meta.xml
<CustomField>
    <fullName>Analytics_Keyword_c__c</fullName>
    <externalDeveloperName>Analytics_Keyword__c</externalDeveloperName>
    <label>Analytics Keyword</label>
    <length>255</length>
    <type>Text</type>
</CustomField>