knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Analytics_Medium_c__c.field-meta.xml
<CustomField>
    <fullName>Analytics_Medium_c__c</fullName>
    <externalDeveloperName>Analytics_Medium__c</externalDeveloperName>
    <label>Analytics Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>