knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Analytics_Source_c__c.field-meta.xml
<CustomField>
    <fullName>Analytics_Source_c__c</fullName>
    <externalDeveloperName>Analytics_Source__c</externalDeveloperName>
    <label>Analytics Source</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>