knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Answering_Service_Phone_c__c.field-meta.xml
<CustomField>
    <fullName>Answering_Service_Phone_c__c</fullName>
    <externalDeveloperName>Answering_Service_Phone__c</externalDeveloperName>
    <label>Answering Service Phone</label>
    <type>Phone</type>
</CustomField>