knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Application_c__c.field-meta.xml
<CustomField>
    <fullName>Application_c__c</fullName>
    <externalDeveloperName>Application__c</externalDeveloperName>
    <label>Application</label>
    <length>18</length>
    <type>Text</type>
</CustomField>