knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Application_Submitted_c__c.field-meta.xml
<CustomField>
    <fullName>Application_Submitted_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Application_Submitted__c</externalDeveloperName>
    <label>Application Submitted</label>
    <type>Checkbox</type>
</CustomField>