knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Approval_Comments_c__c.field-meta.xml
<CustomField>
    <fullName>Approval_Comments_c__c</fullName>
    <externalDeveloperName>Approval_Comments__c</externalDeveloperName>
    <label>Approval Comments</label>
    <type>TextArea</type>
</CustomField>