knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/AppSubmitted_c__c.field-meta.xml
<CustomField>
    <fullName>AppSubmitted_c__c</fullName>
    <externalDeveloperName>AppSubmitted__c</externalDeveloperName>
    <label>AppSubmitted</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>