knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/AssistantPhone__c.field-meta.xml
<CustomField>
    <fullName>AssistantPhone__c</fullName>
    <externalDeveloperName>AssistantPhone</externalDeveloperName>
    <label>Asst. Phone</label>
    <type>Phone</type>
</CustomField>