knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Asst_Email_c__c.field-meta.xml
<CustomField>
    <fullName>Asst_Email_c__c</fullName>
    <externalDeveloperName>Asst_Email__c</externalDeveloperName>
    <label>Asst. Email</label>
    <type>Email</type>
</CustomField>