knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Asst_Phone_Ext_c__c.field-meta.xml
<CustomField>
    <fullName>Asst_Phone_Ext_c__c</fullName>
    <externalDeveloperName>Asst_Phone_Ext__c</externalDeveloperName>
    <label>Asst Phone Ext</label>
    <length>20</length>
    <type>Text</type>
</CustomField>