knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/ATLS_c__c.field-meta.xml
<CustomField>
    <fullName>ATLS_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>ATLS__c</externalDeveloperName>
    <label>ATLS</label>
    <type>Checkbox</type>
</CustomField>