knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/AvailableDate_c__c.field-meta.xml
<CustomField>
    <fullName>AvailableDate_c__c</fullName>
    <externalDeveloperName>AvailableDate__c</externalDeveloperName>
    <label>Available Date</label>
    <type>Date</type>
</CustomField>