knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/BC_c__c.field-meta.xml
<CustomField>
    <fullName>BC_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>BC__c</externalDeveloperName>
    <label>Board Certified?</label>
    <type>Checkbox</type>
</CustomField>