knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Beeper_Number_c__c.field-meta.xml
<CustomField>
    <fullName>Beeper_Number_c__c</fullName>
    <externalDeveloperName>Beeper_Number__c</externalDeveloperName>
    <label>Beeper Number</label>
    <type>Phone</type>
</CustomField>