knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Beeper_Number_Ext_c__c.field-meta.xml
<CustomField>
    <fullName>Beeper_Number_Ext_c__c</fullName>
    <externalDeveloperName>Beeper_Number_Ext__c</externalDeveloperName>
    <label>Beeper Number Ext</label>
    <length>20</length>
    <type>Text</type>
</CustomField>