knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Birth_City_c__c.field-meta.xml
<CustomField>
    <fullName>Birth_City_c__c</fullName>
    <externalDeveloperName>Birth_City__c</externalDeveloperName>
    <label>Birth City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>