knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Birth_County_c__c.field-meta.xml
<CustomField>
    <fullName>Birth_County_c__c</fullName>
    <externalDeveloperName>Birth_County__c</externalDeveloperName>
    <label>Birth County</label>
    <length>50</length>
    <type>Text</type>
</CustomField>