knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Birth_State_c__c.field-meta.xml
<CustomField>
    <fullName>Birth_State_c__c</fullName>
    <externalDeveloperName>Birth_State__c</externalDeveloperName>
    <label>Birth State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>