knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Blackberry_Pin_c__c.field-meta.xml
<CustomField>
    <fullName>Blackberry_Pin_c__c</fullName>
    <externalDeveloperName>Blackberry_Pin__c</externalDeveloperName>
    <label>Blackberry PIN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>