knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Board_Certification_Status_c__c.field-meta.xml
<CustomField>
    <fullName>Board_Certification_Status_c__c</fullName>
    <externalDeveloperName>Board_Certification_Status__c</externalDeveloperName>
    <label>Board Certification Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>