knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Board_Certified_c__c.field-meta.xml
<CustomField>
    <fullName>Board_Certified_c__c</fullName>
    <externalDeveloperName>Board_Certified__c</externalDeveloperName>
    <label>Board Certified</label>
    <length>4099</length>
    <type>LongTextArea</type>
</CustomField>