knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Board_Certified_Subspecialty_c__c.field-meta.xml
<CustomField>
    <fullName>Board_Certified_Subspecialty_c__c</fullName>
    <externalDeveloperName>Board_Certified_Subspecialty__c</externalDeveloperName>
    <label>Board Certified Subspecialty</label>
    <length>50</length>
    <type>Text</type>
</CustomField>