knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Board_Prepared_c__c.field-meta.xml
<CustomField>
    <fullName>Board_Prepared_c__c</fullName>
    <externalDeveloperName>Board_Prepared__c</externalDeveloperName>
    <label>Board Prepared</label>
    <length>255</length>
    <type>Text</type>
</CustomField>