knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/BoardPrepared_c__c.field-meta.xml
<CustomField>
    <fullName>BoardPrepared_c__c</fullName>
    <externalDeveloperName>BoardPrepared__c</externalDeveloperName>
    <label>Board Prepared</label>
    <length>4099</length>
    <type>LongTextArea</type>
</CustomField>