knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Bullhorn_ID_c__c.field-meta.xml
<CustomField>
    <fullName>Bullhorn_ID_c__c</fullName>
    <externalDeveloperName>Bullhorn_ID__c</externalDeveloperName>
    <label>Bullhorn Candidate Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>