knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Can_Emerg_Contact_Phone_2_Receive_Text_c__c.field-meta.xml
<CustomField>
    <fullName>Can_Emerg_Contact_Phone_2_Receive_Text_c__c</fullName>
    <externalDeveloperName>Can_Emerg_Contact_Phone_2_Receive_Text__c</externalDeveloperName>
    <label>Can Emerg Contact Phone 2 Receive Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>