knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Can_Emergency_Contact_Phone_c__c.field-meta.xml
<CustomField>
    <fullName>Can_Emergency_Contact_Phone_c__c</fullName>
    <externalDeveloperName>Can_Emergency_Contact_Phone__c</externalDeveloperName>
    <label>Can Emerg Contact Phone 1 Receive Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>