knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/CanAllowPortalSelfReg__c.field-meta.xml
<CustomField>
    <fullName>CanAllowPortalSelfReg__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>CanAllowPortalSelfReg</externalDeveloperName>
    <label>Allow Customer Portal Self-Registration</label>
    <type>Checkbox</type>
</CustomField>