knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Candidate_Tier_c__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Tier_c__c</fullName>
    <externalDeveloperName>Candidate_Tier__c</externalDeveloperName>
    <label>Candidate Tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>