knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/CAQH_c__c.field-meta.xml
<CustomField>
    <fullName>CAQH_c__c</fullName>
    <externalDeveloperName>CAQH__c</externalDeveloperName>
    <label>CAQH #</label>
    <length>25</length>
    <type>Text</type>
</CustomField>