knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Career_Aspirations_c__c.field-meta.xml
<CustomField>
    <fullName>Career_Aspirations_c__c</fullName>
    <externalDeveloperName>Career_Aspirations__c</externalDeveloperName>
    <label>Career Aspirations</label>
    <length>4099</length>
    <type>LongTextArea</type>
</CustomField>