knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Certification_s_c__c.field-meta.xml
<CustomField>
    <fullName>Certification_s_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Certification_s__c</externalDeveloperName>
    <label>Certification(s)</label>
    <type>Checkbox</type>
</CustomField>