knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Certifications_c__c.field-meta.xml
<CustomField>
    <fullName>Certifications_c__c</fullName>
    <externalDeveloperName>Certifications__c</externalDeveloperName>
    <label>Certifications</label>
    <type>TextArea</type>
</CustomField>