knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Children_c__c.field-meta.xml
<CustomField>
    <fullName>Children_c__c</fullName>
    <externalDeveloperName>Children__c</externalDeveloperName>
    <label>Children Details</label>
    <length>50</length>
    <type>Text</type>
</CustomField>