knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/City_Preference_c__c.field-meta.xml
<CustomField>
    <fullName>City_Preference_c__c</fullName>
    <externalDeveloperName>City_Preference__c</externalDeveloperName>
    <label>City Preference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>