knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Claims_Comments_c__c.field-meta.xml
<CustomField>
    <fullName>Claims_Comments_c__c</fullName>
    <externalDeveloperName>Claims_Comments__c</externalDeveloperName>
    <label>Claims Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>