knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Claims_History_c__c.field-meta.xml
<CustomField>
    <fullName>Claims_History_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Claims_History__c</externalDeveloperName>
    <label>Claims History</label>
    <type>Checkbox</type>
</CustomField>