knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Communication_Preference_Comments_c__c.field-meta.xml
<CustomField>
    <fullName>Communication_Preference_Comments_c__c</fullName>
    <externalDeveloperName>Communication_Preference_Comments__c</externalDeveloperName>
    <label>Communication Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>