knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Community_Size_c__c.field-meta.xml
<CustomField>
    <fullName>Community_Size_c__c</fullName>
    <externalDeveloperName>Community_Size__c</externalDeveloperName>
    <label>Community Size</label>
    <length>4099</length>
    <type>LongTextArea</type>
</CustomField>