knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Completed_Annual_Client_Survey_c__c.field-meta.xml
<CustomField>
    <fullName>Completed_Annual_Client_Survey_c__c</fullName>
    <externalDeveloperName>Completed_Annual_Client_Survey__c</externalDeveloperName>
    <label>Completed Annual Client Survey</label>
    <type>Url</type>
</CustomField>