knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Compliance_Training_Completed_c__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Training_Completed_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Compliance_Training_Completed__c</externalDeveloperName>
    <label>Compliance Training Completed</label>
    <type>Checkbox</type>
</CustomField>