knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Contact_ID_c__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID_c__c</fullName>
    <externalDeveloperName>Contact_ID__c</externalDeveloperName>
    <label>Contact ID</label>
    <type>TextArea</type>
</CustomField>