knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Corporation_City_c__c.field-meta.xml
<CustomField>
    <fullName>Corporation_City_c__c</fullName>
    <externalDeveloperName>Corporation_City__c</externalDeveloperName>
    <label>Corporation City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>