knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Corporation_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Corporation_Name_c__c</fullName>
    <externalDeveloperName>Corporation_Name__c</externalDeveloperName>
    <label>Corporation Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>