knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Corporation_State_c__c.field-meta.xml
<CustomField>
    <fullName>Corporation_State_c__c</fullName>
    <externalDeveloperName>Corporation_State__c</externalDeveloperName>
    <label>Corporation State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>