knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Count_of_Global_ID_Sent_c__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Global_ID_Sent_c__c</fullName>
    <externalDeveloperName>Count_of_Global_ID_Sent__c</externalDeveloperName>
    <label>Count of Global ID Sent</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>