knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Country_of_Citizenship_c__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Citizenship_c__c</fullName>
    <externalDeveloperName>Country_of_Citizenship__c</externalDeveloperName>
    <label>Country of Citizenship</label>
    <length>20</length>
    <type>Text</type>
</CustomField>