knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Credentialer_c__c.field-meta.xml
<CustomField>
    <fullName>Credentialer_c__c</fullName>
    <externalDeveloperName>Credentialer__c</externalDeveloperName>
    <label>Credentialer</label>
    <length>18</length>
    <type>Text</type>
</CustomField>