knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Credentialing_Completed_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Credentialing_Completed_Date_c__c</fullName>
    <externalDeveloperName>Credentialing_Completed_Date__c</externalDeveloperName>
    <label>Credentialing Completed Date</label>
    <type>Date</type>
</CustomField>