knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Credentials_c__c.field-meta.xml
<CustomField>
    <fullName>Credentials_c__c</fullName>
    <externalDeveloperName>Credentials__c</externalDeveloperName>
    <label>Credentials</label>
    <type>TextArea</type>
</CustomField>