knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Current_Facility_c__c.field-meta.xml
<CustomField>
    <fullName>Current_Facility_c__c</fullName>
    <externalDeveloperName>Current_Facility__c</externalDeveloperName>
    <label>Current Facility</label>
    <length>18</length>
    <type>Text</type>
</CustomField>