knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Current_Hourly_Rate_c__c.field-meta.xml
<CustomField>
    <fullName>Current_Hourly_Rate_c__c</fullName>
    <externalDeveloperName>Current_Hourly_Rate__c</externalDeveloperName>
    <label>Current Hourly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>