knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Current_Malpractice_Claims_c__c.field-meta.xml
<CustomField>
    <fullName>Current_Malpractice_Claims_c__c</fullName>
    <externalDeveloperName>Current_Malpractice_Claims__c</externalDeveloperName>
    <label>Current Malpractice Claims</label>
    <length>255</length>
    <type>Text</type>
</CustomField>