knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Current_Position_c__c.field-meta.xml
<CustomField>
    <fullName>Current_Position_c__c</fullName>
    <externalDeveloperName>Current_Position__c</externalDeveloperName>
    <label>Current Position</label>
    <length>150</length>
    <type>Text</type>
</CustomField>