knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Current_Volume_c__c.field-meta.xml
<CustomField>
    <fullName>Current_Volume_c__c</fullName>
    <externalDeveloperName>Current_Volume__c</externalDeveloperName>
    <label>Current Volume</label>
    <length>255</length>
    <type>Text</type>
</CustomField>