knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/CurrentEmployer_c__c.field-meta.xml
<CustomField>
    <fullName>CurrentEmployer_c__c</fullName>
    <externalDeveloperName>CurrentEmployer__c</externalDeveloperName>
    <label>Current Employer</label>
    <type>TextArea</type>
</CustomField>