knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/CV_Current_as_of_c__c.field-meta.xml
<CustomField>
    <fullName>CV_Current_as_of_c__c</fullName>
    <externalDeveloperName>CV_Current_as_of__c</externalDeveloperName>
    <label>CV/Resume Current as of</label>
    <type>Date</type>
</CustomField>