knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/CV_Resume_c__c.field-meta.xml
<CustomField>
    <fullName>CV_Resume_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>CV_Resume__c</externalDeveloperName>
    <label>CV/Resume</label>
    <type>Checkbox</type>
</CustomField>