knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/CV_Resume_Text_c__c.field-meta.xml
<CustomField>
    <fullName>CV_Resume_Text_c__c</fullName>
    <externalDeveloperName>CV_Resume_Text__c</externalDeveloperName>
    <label>CV/Resume Text</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>