knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Dart_Responder_c__c.field-meta.xml
<CustomField>
    <fullName>Dart_Responder_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Dart_Responder__c</externalDeveloperName>
    <label>Dart Responder</label>
    <type>Checkbox</type>
</CustomField>