knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Date_Approved_c__c.field-meta.xml
<CustomField>
    <fullName>Date_Approved_c__c</fullName>
    <externalDeveloperName>Date_Approved__c</externalDeveloperName>
    <label>Date Approved</label>
    <type>Date</type>
</CustomField>