knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Date_of_Birth_from_Lead_c__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth_from_Lead_c__c</fullName>
    <externalDeveloperName>Date_of_Birth_from_Lead__c</externalDeveloperName>
    <label>Date of Birth from Lead</label>
    <type>Date</type>
</CustomField>