knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Day_of_Birth_c__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Birth_c__c</fullName>
    <externalDeveloperName>Day_of_Birth__c</externalDeveloperName>
    <label>Day of Birth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>