knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/DEA_c__c.field-meta.xml
<CustomField>
    <fullName>DEA_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>DEA__c</externalDeveloperName>
    <label>DEA</label>
    <type>Checkbox</type>
</CustomField>