knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Degree_c__c.field-meta.xml
<CustomField>
    <fullName>Degree_c__c</fullName>
    <externalDeveloperName>Degree__c</externalDeveloperName>
    <label>Degree</label>
    <type>TextArea</type>
</CustomField>