knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/DEL_Data_Quality_Description_c__c.field-meta.xml
<CustomField>
    <fullName>DEL_Data_Quality_Description_c__c</fullName>
    <externalDeveloperName>DEL_Data_Quality_Description__c</externalDeveloperName>
    <label>DEL_Data Quality Description</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>