knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/DEL_Data_Quality_Score_c__c.field-meta.xml
<CustomField>
    <fullName>DEL_Data_Quality_Score_c__c</fullName>
    <externalDeveloperName>DEL_Data_Quality_Score__c</externalDeveloperName>
    <label>DEL_Data Quality Score</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>