knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Denial_Comments_c__c.field-meta.xml
<CustomField>
    <fullName>Denial_Comments_c__c</fullName>
    <externalDeveloperName>Denial_Comments__c</externalDeveloperName>
    <label>Denial Comments</label>
    <type>TextArea</type>
</CustomField>