knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Department2_c__c.field-meta.xml
<CustomField>
    <fullName>Department2_c__c</fullName>
    <externalDeveloperName>Department2__c</externalDeveloperName>
    <label>Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>