knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Difference_in_Active_PFA_s_of_EL_s_c__c.field-meta.xml
<CustomField>
    <fullName>Difference_in_Active_PFA_s_of_EL_s_c__c</fullName>
    <externalDeveloperName>Difference_in_Active_PFA_s_of_EL_s__c</externalDeveloperName>
    <label>Difference in Active PFA&apos;s &amp; # of EL&apos;s</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>