knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Difference_in_of_PFA_s_and_Prospects_c__c.field-meta.xml
<CustomField>
    <fullName>Difference_in_of_PFA_s_and_Prospects_c__c</fullName>
    <externalDeveloperName>Difference_in_of_PFA_s_and_Prospects__c</externalDeveloperName>
    <label>Difference in # of PFA&apos;s and Prospects</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>