knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Diploma_c__c.field-meta.xml
<CustomField>
    <fullName>Diploma_c__c</fullName>
    <externalDeveloperName>Diploma__c</externalDeveloperName>
    <label>Diploma(s)</label>
    <length>4099</length>
    <type>LongTextArea</type>
</CustomField>