knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/DO_c__c.field-meta.xml
<CustomField>
    <fullName>DO_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>DO__c</externalDeveloperName>
    <label>DO</label>
    <type>Checkbox</type>
</CustomField>