knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Do_Not_Create_Portal_User_Automaticall_c__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Create_Portal_User_Automaticall_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Do_Not_Create_Portal_User_Automaticall__c</externalDeveloperName>
    <label>Do Not Create Portal User Automaticall</label>
    <type>Checkbox</type>
</CustomField>