knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/DocsComments_c__c.field-meta.xml
<CustomField>
    <fullName>DocsComments_c__c</fullName>
    <externalDeveloperName>DocsComments__c</externalDeveloperName>
    <label>Docs on File Comments</label>
    <type>TextArea</type>
</CustomField>